# open-pedals

./: .gitignore  CMakeLists.txt  README.md
.opencode/plans/: guitar-effects-plugins.md
common/: BiquadFilter.h  CabinetSim.h  DelayLine.h  EnvelopeFollower.h  LFO.h  Oversampling.h  ToneStack.h  Waveshaper.h
plugins/AcousticSim/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/AmpSim/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/AnalogDelay/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/AutoWah/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Chorus/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Compressor/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Delay/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Detune/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Distortion/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Flanger/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Fuzz/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/GraphicEQ/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Harmonizer/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Humanizer/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Limiter/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Looper/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/NoiseGate/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Octaver/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Overdrive/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/ParametricEQ/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Phaser/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/PitchShifter/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/PlateReverb/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Reverb/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/ReverseDelay/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/RingMod/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Rotary/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/ShimmerReverb/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Slicer/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/SlowGear/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/SpringReverb/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/TapeDelay/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Tremolo/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Tuner/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/UniVibe/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Vibrato/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/Wah/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
